# starbreaker

./: Cargo.toml  README.md
assets/dark_felucia/fel_terrain_1/: HeightInfo.txt
assets/dark_felucia/glow_mushroom/: glow_mush_lp.FBX
assets/dark_felucia/mushroom_small/: fel_H1b_mushroom_.fbx  fel_g1_mushroom.fbx  fel_g_mushroom.fbx
assets/dark_felucia/mushroom_small/textures/: desktop.ini
assets/dark_felucia/rancor/: fel_rancor.FBX
assets/dark_felucia/rancor/textures/paintedRancorGreen/: RancorGreen_body_diffuse.dds  RancorGreen_body_glow.dds  RancorGreen_body_sp_ao.dds  RancorGreen_head_diffuse.dds  RancorGreen_head_glow.dds  RancorGreen_head_sp_ao.dds
assets/dark_felucia/rancor/textures/paintedRancorPurple/: clothpiercing.dds  rancor_body_PurpleGlow.dds  rancor_body_rgb.dds  rancor_body_sp_ao.dds  rancor_head_PurpleGlow.dds  rancor_head_rgb.dds  rancor_head_sp_ao.dds
assets/dark_felucia/rancor/textures/saddledRancor/: SADDLE_A_LightMap.dds  SADDLE_B_LightMap.dds  SADDLE_COLOR_A.dds  SADDLE_COLOR_B.dds  SADDLE_SPEC_A.dds  SADDLE_SPEC_B.dds  Saddle_NORMAL_A_V2.dds  Saddle_NORMAL_B_V2.dds  rancorRidderHead_sp_AO.dds
assets/dark_felucia/saleucami_stuff/: sal_bladder0_lp.FBX
assets/dark_felucia/segmented/: seg_lp.FBX
assets/dark_felucia/teeth/: teeth.FBX  tooth_1.FBX  tooth_rock.FBX
assets/models/Acclamator/: Acclamator.gltf
assets/models/CloneTrooper/: StandardClone.gltf
assets/models/Felucia/: segmented.gltf
assets/models/Vehicles/74Z/: 74Z.gltf
src/: fps.rs  main.rs  world_gen.rs
